# factor-score

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
factor_score/: engine.py
factor_score/factors/: composite.py  value.py
factor_score/providers/: base.py
src/factor_score/: __init__.py  models.py
src/factor_score/factors/: __init__.py  momentum.py
src/factor_score/providers/: __init__.py  yfinance.py
tests/: test_engine.py  test_factors.py
