[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "factor-score"
version = "0.1.0"
description = "Quantitative factor scoring for equities and ETFs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Brain Scan Studios", email = "bkirsten@brainscanstudios.com" },
]
keywords = ["finance", "quant", "factor", "etf", "momentum", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "yfinance>=0.2",
]

[project.urls]
Repository = "https://github.com/brainscanstudios/factor-score"
Issues = "https://github.com/brainscanstudios/factor-score/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/factor_score"]

[tool.pytest.ini_options]
testpaths = ["tests"]
